# kraken

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  displayHandler.hpp  exchange.hpp  order.hpp  orderBook.hpp  parser.hpp  receiver.hpp
src/: CMakeLists.txt  client.cpp  main.cpp
