set(CMAKE_VERBOSE_MAKEFILE ON)
cmake_minimum_required(VERSION 3.10)
project(Kraken)
set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
#set(CMAKE_BUILD_TYPE Debug) 

find_package(Threads REQUIRED)
find_package(Boost COMPONENTS system REQUIRED)
include_directories(include)
add_subdirectory(src)